--- a/debian/control
+++ b/debian/control
@@ -54,8 +54,13 @@ Depends: evince-common (<< ${gnome:NextVersion}),
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: default-dbus-session-bus | dbus-session-bus
-Provides: djvu-viewer, pdf-viewer, postscript-viewer
-Suggests: gvfs, nautilus, poppler-data, unrar
+Provides: djvu-viewer,
+          pdf-viewer,
+          postscript-viewer
+Suggests: gvfs,
+          nautilus,
+          poppler-data,
+          unrar
 Breaks: apparmor-profiles-extra (<< 1.7~),
         evince-common (<< 3.20.0-2~),
         evince-gtk (<< 3.14.1-3~)
@@ -74,7 +79,8 @@ Package: evince-gtk
 Section: oldlibs
 Priority: extra
 Architecture: any
-Depends: evince (= ${binary:Version}), ${misc:Depends}
+Depends: evince (= ${binary:Version}),
+         ${misc:Depends}
 Description: dummy package for the transition from evince-gtk to evince
  This package is a transitional dummy package. It can be safely removed.
 
@@ -95,7 +101,8 @@ Package: libevdocument3-4
 Architecture: any
 Multi-Arch: same
 Section: libs
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
 Breaks: evince-common (<< 3.20.0-2~)
 Replaces: evince-common (<< 3.20.0-2~)
 Description: Document (PostScript, PDF) rendering library
@@ -108,7 +115,9 @@ Package: libevview3-3
 Architecture: any
 Multi-Arch: same
 Section: libs
-Depends: gstreamer1.0-plugins-base, ${misc:Depends}, ${shlibs:Depends}
+Depends: gstreamer1.0-plugins-base,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Document (PostScript, PDF) rendering library - Gtk+ widgets
  This package contains libevview, which provides GTK+ widgets for displaying
  documents.
@@ -137,8 +146,11 @@ Package: gir1.2-evince-3.0
 Section: introspection
 Architecture: any
 Multi-Arch: same
-Depends: ${gir:Depends}, ${misc:Depends}, ${shlibs:Depends}
-Provides: gir1.2-evince-document-3.0, gir1.2-evince-view-3.0
+Depends: ${gir:Depends},
+         ${misc:Depends},
+         ${shlibs:Depends}
+Provides: gir1.2-evince-document-3.0,
+          gir1.2-evince-view-3.0
 Description: GObject introspection data for the evince libraries
  This package contains introspection data for the libevview and
  libevdocument libraries.
@@ -155,7 +167,8 @@ Description: GObject introspection data for the evince libraries
 
 Package: browser-plugin-evince
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
 Description: plugin for web browsers to display documents (PostScript, PDF, …)
  This package contains a plugin to display all the document types evince can
  handle inside the browser window.
