--- a/debian/rules
+++ b/debian/rules
@@ -35,13 +35,8 @@ override_dh_strip:
 	dh_strip --dbgsym-migration='evince-dbg (<< 3.20.0-2~)'
 
 override_dh_install:
-	find debian/tmp -name '*.a' -print -delete
-	find debian/tmp -name '*.la' -print -delete
-	dh_install
+	dh_install --list-missing
 	install -m 0644 -D debian/apparmor-profile debian/evince/etc/apparmor.d/usr.bin.evince
 	install -m 0644 -D debian/apparmor-profile.abstraction debian/evince/etc/apparmor.d/abstractions/evince
 	install -m 0644 -D debian/evince.apport debian/evince/usr/share/apport/package-hooks/source_evince.py
 	dh_apparmor --profile-name=usr.bin.evince -pevince
-
-override_dh_missing:
-	dh_missing --fail-missing
