--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,7 @@ Build-Depends: adwaita-icon-theme,
                libgirepository1.0-dev (>= 1.0),
                libglib2.0-dev (>= 2.36),
                libgnome-desktop-3-dev,
+               libgspell-1-dev (>= 1.6.0),
                libgstreamer-plugins-base1.0-dev,
                libgstreamer1.0-dev,
                libgtk-3-dev (>= 3.16.0),
@@ -35,6 +36,7 @@ Build-Depends: adwaita-icon-theme,
                libsecret-1-dev (>= 0.5),
                libsm-dev (>= 2:1.0.0),
                libspectre-dev (>= 0.2.0),
+               libsynctex-dev,
                libtiff-dev,
                libx11-dev,
                libxml2-dev (>= 2.5.0),
