--- a/debian/control.in
+++ b/debian/control.in
@@ -63,10 +63,12 @@ Suggests: gvfs,
           unrar
 Breaks: apparmor-profiles-extra (<< 1.7~),
         evince-common (<< 3.20.0-2~),
-        evince-gtk (<< 3.14.1-3~)
+        evince-gtk (<< 3.14.1-3~),
+        libevdocument3-4 (<< 3.29.91-2~)
 Replaces: apparmor-profiles-extra (<< 1.7~),
           evince-common (<< 3.20.0-2~),
-          evince-gtk (<< 3.14.1-3~)
+          evince-gtk (<< 3.14.1-3~),
+          libevdocument3-4 (<< 3.29.91-2~)
 Enhances: nautilus
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
