--- a/debian/control.in
+++ b/debian/control.in
@@ -61,14 +61,8 @@ Suggests: gvfs,
           nautilus-sendto,
           poppler-data,
           unrar
-Breaks: apparmor-profiles-extra (<< 1.7~),
-        evince-common (<< 3.20.0-2~),
-        evince-gtk (<< 3.14.1-3~),
-        libevdocument3-4 (<< 3.29.91-2~)
-Replaces: apparmor-profiles-extra (<< 1.7~),
-          evince-common (<< 3.20.0-2~),
-          evince-gtk (<< 3.14.1-3~),
-          libevdocument3-4 (<< 3.29.91-2~)
+Breaks: libevdocument3-4 (<< 3.29.91-2~)
+Replaces: libevdocument3-4 (<< 3.29.91-2~)
 Enhances: nautilus
 Description: Document (PostScript, PDF) viewer
  Evince is a simple multi-page document viewer.  It can display and print
@@ -97,8 +91,6 @@ Multi-Arch: same
 Section: libs
 Depends: ${misc:Depends},
          ${shlibs:Depends}
-Breaks: evince-common (<< 3.20.0-2~)
-Replaces: evince-common (<< 3.20.0-2~)
 Description: Document (PostScript, PDF) rendering library
  This package contains libevdocument, which performs the rendering of the
  documents.
