--- a/debian/rules
+++ b/debian/rules
@@ -16,6 +16,7 @@ override_dh_autoreconf:
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--libexecdir=/usr/lib/evince \
+		--disable-browser-plugin \
 		--enable-djvu \
 		--enable-dvi \
 		--enable-xps \
