--- a/debian/control.in
+++ b/debian/control.in
@@ -7,6 +7,8 @@ Build-Depends: adwaita-icon-theme,
                appstream,
                debhelper-compat (= 12),
                dh-apparmor,
+               dh-sequence-gir,
+               dh-sequence-gnome,
                dpkg-dev (>= 1.16.1),
                gnome-common,
                gnome-pkg-tools (>= 0.10),
