--- a/debian/control
+++ b/debian/control
@@ -45,6 +45,7 @@ Build-Depends: adwaita-icon-theme,
                libxml2-dev (>= 2.5.0),
                yelp-tools,
                zlib1g-dev
+Rules-Requires-Root: no
 Standards-Version: 4.4.0
 Vcs-Browser: https://salsa.debian.org/gnome-team/evince
 Vcs-Git: https://salsa.debian.org/gnome-team/evince.git
