--- a/debian/rules
+++ b/debian/rules
@@ -2,26 +2,18 @@
 include /usr/share/dpkg/buildflags.mk
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
-export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,-z,defs -Wl,--as-needed
-
-# Mozilla plugins shouldn't be installed in multi-arch path
-export BROWSER_PLUGIN_DIR = /usr/lib/mozilla/plugins
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,-z,defs
 
 %:
-	dh $@ --buildsystem=meson
+	dh $@
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		-Dbrowser_plugin=false \
-		-Ddjvu=enabled \
-		-Ddvi=enabled \
+		-Dauto_features=enabled \
 		-Dps=enabled \
-		-Dxps=enabled \
-		-Dcomics=enabled \
+		-Dt1lib=disabled \
 		-Dintrospection=true \
-		-Dgtk_doc=true \
-		-Dtiff=enabled \
-		-Dthumbnail_cache=enabled
+		-Dgtk_doc=true
 
 override_dh_makeshlibs:
 	dh_makeshlibs \
@@ -30,8 +22,6 @@ override_dh_makeshlibs:
 		-V -- -c4
 
 override_dh_install:
-	find debian/tmp -name '*.a' -print -delete
-	find debian/tmp -name '*.la' -print -delete
 	dh_install
 	install -m 0644 -D debian/apparmor-profile debian/evince/etc/apparmor.d/usr.bin.evince
 	install -m 0644 -D debian/apparmor-profile.abstraction debian/evince/etc/apparmor.d/abstractions/evince
