--- a/debian/control.in
+++ b/debian/control.in
@@ -8,9 +8,8 @@ Build-Depends: adwaita-icon-theme,
                debhelper-compat (= 12),
                dh-apparmor,
                dh-sequence-gir,
-               dh-sequence-gnome,
+               dh-sequence-gnome (>= 0.22),
                dpkg-dev (>= 1.16.1),
-               gnome-pkg-tools (>= 0.10),
                gobject-introspection (>= 1.0),
                gsettings-desktop-schemas-dev,
                gtk-doc-tools (>= 1.13),
