--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,7 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,-z,defs
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		-Dauto_features=enabled \
+		-Dinternal_synctex=false \
 		-Dps=enabled \
 		-Dt1lib=disabled \
 		-Dintrospection=true \
