--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,7 @@ override_dh_auto_configure:
 	dh_auto_configure -- \
 		-Dauto_features=enabled \
 		-Dinternal_synctex=false \
+		-Dnautilus=false \
 		-Dps=enabled \
 		-Dintrospection=true \
 		-Dgtk_doc=true
