--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Source: evince
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Amin Bandali <bandali@ubuntu.com>, Jeremy Bícha <jbicha@ubuntu.com>, Laurent Bigonville <bigon@debian.org>, Marco Trevisan (Treviño) <marco@ubuntu.com>, Michael Biebl <biebl@debian.org>, Tim Lunn <tim@feathertop.org>
+Uploaders: Amin Bandali <bandali@ubuntu.com>, Jeremy Bícha <jbicha@ubuntu.com>, Laurent Bigonville <bigon@debian.org>, Marco Trevisan (Treviño) <marco@ubuntu.com>, Tim Lunn <tim@feathertop.org>
 Build-Depends: adwaita-icon-theme,
                debhelper-compat (= 13),
                desktop-file-utils,
@@ -37,7 +37,7 @@ Build-Depends: adwaita-icon-theme,
                libhandy-1-dev (>= 1.5.90),
                libkpathsea-dev,
                libpango1.0-doc,
-               libpoppler-glib-dev (>= 22.02),
+               libpoppler-glib-dev (>= 22.05),
                libsecret-1-dev (>= 0.5),
                libsm-dev (>= 2:1.0.0),
                libspectre-dev (>= 0.2.0),
